sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:4: error: illegal start of simple expression
  var v=getValeur(i)
  ^AlgInsertionSort:10: error: Unmatched closing brace '}' ignored here
}
^